# fraud-de.tech

./: .env  .gitignore  Hypothesis_Log.md  Implementation_Plan.md  PRD.md  README.md  analyze_clean.ipynb  app_data.csv  audit_log.json  data_prep.py  labeled_transactions.csv  main.py  pyproject.toml  requirements.txt  test_detector.py  test_feedback.py  transactions.csv
.ipynb_checkpoints/: analyze-checkpoint.ipynb  analyze_clean-checkpoint.ipynb
fraud_detection_agent/: agent.py  current_results.csv  evaluate_accuracy.py  resume_investigation.py  run_investigation.py  tools.py
fraud_detection_agent/logs/: agent_investigation_results.json  agent_investigation_results_20260531_075712.json  agent_investigation_results_20260531_080514.json  agent_investigation_results_partial.json
static/: app.js  index.html  style.css
